// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/pip_setup/index extractPackageFile() catches error 1`] = `
Array [
  Object {
    "cmd": "python --version",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "python3 --version",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "python3.8 --version",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "python3.9 --version",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "<extract.py> \\"folders/foobar.py\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo/folders",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 30000,
    },
  },
]
`;

exports[`manager/pip_setup/index extractPackageFile() returns found deps (docker) 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": ">=3.1.13.0,<5.0",
      "datasource": "pypi",
      "depName": "celery",
      "managerData": Object {
        "lineNumber": 36,
      },
    },
    Object {
      "currentValue": ">=1.7",
      "datasource": "pypi",
      "depName": "logging_tree",
      "managerData": Object {
        "lineNumber": 39,
      },
    },
    Object {
      "currentValue": ">=2.2",
      "datasource": "pypi",
      "depName": "pygments",
      "managerData": Object {
        "lineNumber": 40,
      },
    },
    Object {
      "currentValue": ">=5.0",
      "datasource": "pypi",
      "depName": "psutil",
      "managerData": Object {
        "lineNumber": 41,
      },
    },
    Object {
      "currentValue": ">=3.0",
      "datasource": "pypi",
      "depName": "objgraph",
      "managerData": Object {
        "lineNumber": 42,
      },
    },
    Object {
      "currentValue": ">=1.11.23,<2.0",
      "datasource": "pypi",
      "depName": "django",
      "managerData": Object {
        "lineNumber": 45,
      },
    },
    Object {
      "currentValue": ">=0.11,<2.0",
      "datasource": "pypi",
      "depName": "flask",
      "managerData": Object {
        "lineNumber": 48,
      },
    },
    Object {
      "currentValue": ">=1.4,<2.0",
      "datasource": "pypi",
      "depName": "blinker",
      "managerData": Object {
        "lineNumber": 49,
      },
    },
    Object {
      "currentValue": ">=19.7.0,<20.0",
      "datasource": "pypi",
      "depName": "gunicorn",
      "managerData": Object {
        "lineNumber": 61,
      },
    },
    Object {
      "currentValue": ">=3.2.1,<4.0",
      "datasource": "pypi",
      "depName": "statsd",
      "managerData": Object {
        "lineNumber": 62,
      },
    },
    Object {
      "currentValue": ">=0.15.3,<0.16",
      "datasource": "pypi",
      "depName": "Werkzeug",
      "managerData": Object {
        "lineNumber": 62,
      },
    },
    Object {
      "currentValue": ">=2.10.0,<3.0",
      "datasource": "pypi",
      "depName": "requests",
      "managerData": Object {
        "lineNumber": 63,
      },
      "skipReason": "ignored",
    },
    Object {
      "currentValue": ">=5.27.1,<7.0",
      "datasource": "pypi",
      "depName": "raven",
      "managerData": Object {
        "lineNumber": 64,
      },
    },
    Object {
      "currentValue": ">=0.15.2,<0.17",
      "datasource": "pypi",
      "depName": "future",
      "managerData": Object {
        "lineNumber": 65,
      },
    },
    Object {
      "currentValue": ">=1.0.16,<2.0",
      "datasource": "pypi",
      "depName": "ipaddress",
      "managerData": Object {
        "lineNumber": 66,
      },
    },
  ],
}
`;

exports[`manager/pip_setup/index extractPackageFile() returns found deps 1`] = `
Object {
  "deps": Array [
    Object {
      "currentValue": ">=3.1.13.0,<5.0",
      "datasource": "pypi",
      "depName": "celery",
      "managerData": Object {
        "lineNumber": 36,
      },
    },
    Object {
      "currentValue": ">=1.7",
      "datasource": "pypi",
      "depName": "logging_tree",
      "managerData": Object {
        "lineNumber": 39,
      },
    },
    Object {
      "currentValue": ">=2.2",
      "datasource": "pypi",
      "depName": "pygments",
      "managerData": Object {
        "lineNumber": 40,
      },
    },
    Object {
      "currentValue": ">=5.0",
      "datasource": "pypi",
      "depName": "psutil",
      "managerData": Object {
        "lineNumber": 41,
      },
    },
    Object {
      "currentValue": ">=3.0",
      "datasource": "pypi",
      "depName": "objgraph",
      "managerData": Object {
        "lineNumber": 42,
      },
    },
    Object {
      "currentValue": ">=1.11.23,<2.0",
      "datasource": "pypi",
      "depName": "django",
      "managerData": Object {
        "lineNumber": 45,
      },
    },
    Object {
      "currentValue": ">=0.11,<2.0",
      "datasource": "pypi",
      "depName": "flask",
      "managerData": Object {
        "lineNumber": 48,
      },
    },
    Object {
      "currentValue": ">=1.4,<2.0",
      "datasource": "pypi",
      "depName": "blinker",
      "managerData": Object {
        "lineNumber": 49,
      },
    },
    Object {
      "currentValue": ">=19.7.0,<20.0",
      "datasource": "pypi",
      "depName": "gunicorn",
      "managerData": Object {
        "lineNumber": 61,
      },
    },
    Object {
      "currentValue": ">=3.2.1,<4.0",
      "datasource": "pypi",
      "depName": "statsd",
      "managerData": Object {
        "lineNumber": 62,
      },
    },
    Object {
      "currentValue": ">=0.15.3,<0.16",
      "datasource": "pypi",
      "depName": "Werkzeug",
      "managerData": Object {
        "lineNumber": 62,
      },
    },
    Object {
      "currentValue": ">=2.10.0,<3.0",
      "datasource": "pypi",
      "depName": "requests",
      "managerData": Object {
        "lineNumber": 63,
      },
      "skipReason": "ignored",
    },
    Object {
      "currentValue": ">=5.27.1,<7.0",
      "datasource": "pypi",
      "depName": "raven",
      "managerData": Object {
        "lineNumber": 64,
      },
    },
    Object {
      "currentValue": ">=0.15.2,<0.17",
      "datasource": "pypi",
      "depName": "future",
      "managerData": Object {
        "lineNumber": 65,
      },
    },
    Object {
      "currentValue": ">=1.0.16,<2.0",
      "datasource": "pypi",
      "depName": "ipaddress",
      "managerData": Object {
        "lineNumber": 66,
      },
    },
  ],
}
`;

exports[`manager/pip_setup/index extractPackageFile() returns found deps 2`] = `
Array [
  Object {
    "cmd": "python --version",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "python3 --version",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "python3.8 --version",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "python3.9 --version",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "<extract.py> \\"lib/manager/pip_setup/__fixtures__/setup.py\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo/lib/manager/pip_setup/__fixtures__",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 30000,
    },
  },
]
`;

exports[`manager/pip_setup/index extractPackageFile() returns no deps 1`] = `
Array [
  Object {
    "cmd": "python --version",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "python3 --version",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "python3.8 --version",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "python3.9 --version",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "<extract.py> \\"lib/manager/pip_setup/__fixtures__/setup.py\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo/lib/manager/pip_setup/__fixtures__",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 30000,
    },
  },
]
`;

exports[`manager/pip_setup/index extractPackageFile() should return null for invalid file 1`] = `
Array [
  Object {
    "cmd": "python --version",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "python3 --version",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "python3.8 --version",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "python3.9 --version",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "<extract.py> \\"folders/foobar.py\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo/folders",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 30000,
    },
  },
]
`;
